# aio_assistant

./: .gitignore
agent/: cli.py  nl_router.py  test_tools.py  tools.py  transport.py
client/: test_client.py
data/560ba5fa45ce1e59602b0607/677f7e74ae8580e7ffcdb849/: meta.json
data/560ba5fa45ce1e59602b0607/67a6834dae8580e7ffb72e8d/: meta.json
data/560ba5fa45ce1e59602b0607/681e7aca163c01c8508dca47/: meta.json
scraper_service/: app.py  browser.py  config.py  main.py  requirements.txt  service.py
scraper_service/app/: main.py
scraper_service/app/clients/: aminer_client.py
scraper_service/app/models/: schemas.py
scraper_service/app/routers/: discovery.py  downloader.py  enrichment.py  enumeration.py
scraper_service/app/services/: discovery_service.py  download_service.py  publications_service.py
server/: CMakeLists.txt  main.cpp
server/include/aio_server/: database.hpp  document_processor.hpp  server.hpp  session.hpp
server/include/aio_server/common/: thread_safe_queue.hpp
server/src/: database.cpp  document_processor.cpp  http_server_main.cpp  main.cpp  server.cpp  session.cpp
